--- a/week8_tools.html
+++ b/week8_tools.html
@@ -82,6 +82,6 @@
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
 <script src="dictionary.js"></script>
-<script src="substitution.js"></script>
+<script src="sub.js"></script>
 </body>
 </html>
